Use Testcontainers for .NET integration tests

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,3 +18,14 @@ jobs:
           pip install azure-keyvault-secrets cryptography pytest requests
       - name: Run tests
         run: pytest
+
+  dotnet-integration-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+      - name: Run .NET integration tests (Testcontainers)
+        run: dotnet test dotnet-tests/FakeAkv.IntegrationTests/FakeAkv.IntegrationTests.csproj
